# collection_macros

./: .travis.yml  Cargo.toml  README.md  index.html  run_tests.sh  search-index.js
collection_macros/: index.html  macro.btreemap!.html  macro.hashmap!.html  sidebar-items.js
src/: btreemap.rs  hashmap.rs  hashset.rs  lib.rs
src/collection_macros/: btreemap.rs.html  hashmap.rs.html  lib.rs.html
