[package]
name = "collection_macros"
version = "0.1.1"
authors = ["Paul Woolcock <paul@woolcock.us>"]
repository = "https://github.com/pwoolcoc/collection_macros"
homepage = "https://github.com/pwoolcoc/collection_macros"
license = "MIT"
description = """
Collection of macros for collections
"""

[features]
nightly = []
