[package]
name = "collection_macros"
version = "0.2.0"
authors = ["Paul Woolcock <paul@woolcock.us>"]
repository = "https://github.com/pwoolcoc/collection_macros"
homepage = "https://github.com/pwoolcoc/collection_macros"
license = "MIT"
documentation = "https://pwoolcoc.github.io/collection_macros"
description = """
Collection of macros for collections
"""
